<resources>
    <string name="app_name">Unit</string>
    <string name="title_home">Home</string>
    <string name="title_discounts">Discounts</string>
    <string name="title_profile">Profile</string>
    <string name="name">Name</string> <!-- hay que setearlos cuando se crean-->
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="profile_pic">Profile Image</string>
    <string name="account_info">Account info</string>
    <string name="payment">Add payment method</string>
    <string name="best_offers">Best offers</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_back">Welcome back</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcomeMsg">Get started by</string>
    <string name="welcomeMs">creating your account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_code">Type the verification code</string>
    <string name="payment_info">Payment Info</string>
    <string name="owner">Owner name</string>
    <string name="card">Credit card number</string>
    <string name="exp">Expiration</string>
    <string name="cvc">CVC code</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="promo">Enter promo code</string>
    <string name="back">Go back</string>
    <string name="company_logo">Company logo</string>
    <string name="location">Where are you going?</string>
    <string name="favorites">Favorites</string>
    <string name="confirm">Confirm destination</string>
    <string name="from">From</string>
    <string name="choose_your_ride">Choose your ride!</string>
    <string name="to">To</string>
    <string name="From">From</string>
    <string name="To">To</string>
    <string name="confirm_your_ride">Confirm your ride</string>
    <string name="company_name">Uber</string>
    <string name="money_symbol">$</string>
    <string name="price_value">xxx,xx</string>
    <string name="company_name2">Cabify</string>
    <string name="price_value2">xxx,xx</string>
    <string name="transport_option1">UnitX</string>
    <string name="transport_option1_size">3</string>
    <string name="occupants">occupants:</string>
    <string name="transport_option2">UnitXL</string>
    <string name="transport_option2_size">6</string>
    <string name="transport_option3">Unit Flash</string>
    <string name="transport_option3_size">2</string>
    <string name="username">E-mail</string>
    <string name="password">Password</string>
    <string name="register">register</string>
    <string name="request_drivers">Request drivers</string>
    <string name="find_drivers">FIND DRIVERS</string>
    <string name="fab_confirm">Confirm</string>
    <string name="current_location">Current Location</string>
    <string name="placeholder">Placeholder</string>
    <string name="request_driver">REQUEST DRIVER</string>
    <string name="driver_information">Driver information</string>
    <string name="cancel_driver">Cancel Drive</string>
    <string name="only_for_today">only for today!</string>
    <string name="get_100">Get $100</string>
    <string name="get_300">Get $300</string>
    <string name="on_your_10th_ride">on your 10th ride!</string>
    <string name="get_200">Get $200</string>
    <string name="on_your_first_ride">on your first ride!</string>
    <string name="phone_number">Phone number</string>
    <string name="cancel_ride">Cancel ride</string>
    <string name="driver_name">Driver Name:</string>
    <string name="driver_plate">Driver Plate:</string>
    <string name="are_you_sure_you_want_to_cancel_this_ride">Are you sure you want to cancel this ride?</string>
    <string name="pickup_time">Pickup Time:&#160;</string>
    <string name="arrival_time">Arrival Time:&#160;</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="car_model">Car Model</string>
    <string name="car_brand">Car Brand:</string>
    <string name="ford">Ford</string>
    <string name="focus">Focus</string>
    <string name="destination_reached">Destination Reached</string>
    <string name="please_rate_the_driver">Please rate the driver</string>
    <string name="done">Done</string>
    <string name="enter_destination">Please enter a destination</string>
    <string name="where_are_you_going">Where are you going?</string>
    <string name="error_ocurred">\"An error occurred: \"</string>
    <string name="log_out">Log out</string>
    <string name="link">Link with</string>
    <string name="john_doe">John Doe</string>
    <string name="separator">&#160;•&#160;</string>
    <string name="star_placeholder">5.0★</string>
    <string name="model_placeholder">Chevrolet Tahoe</string>
    <string name="plate_placeholder">4BCF82</string>
    <string name="placeholder_time_value">12:24</string>
    <string name="upgrade_plan">Upgrade plan</string>
</resources>