<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".fragments.HomeFragment">

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_margin="16dp"
        android:backgroundTint="@color/primaryDarkColor"
        android:contentDescription="@string/request_drivers"
        android:text="@string/find_drivers"
        android:textColor="#FFFFFFFF"
        app:icon="@drawable/ic_baseline_drive_eta_24"
        app:iconTint="#FFFFFFFF" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/driver_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="30dp"
        android:backgroundTint="#3F51B5"
        android:contentDescription="@string/driver_information"
        android:src="@drawable/ic_baseline_info_24"
        android:textColor="#FFFFFF"
        android:visibility="invisible"

        app:tint="#FFFFFF" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/cancel_ride"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="35dp"
        android:backgroundTint="#FF0000"
        android:contentDescription="@string/cancel_driver"
        android:text="@string/cancel_ride"
        android:textColor="#FFFFFF"
        android:visibility="invisible"

        app:icon="@drawable/ic_baseline_cancel_24"
        app:iconTint="#FFFFFF" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="60dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <fragment
            android:id="@+id/autocomplete_fragment"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:textColor="@android:color/primary_text_light"
            android:textColorHint="@color/grey" />
    </androidx.cardview.widget.CardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>